[tool.poetry]
name = "nekton"
version = "0.2.6"
description = "A python package for DICOM to NifTi and NifTi to DICOM-SEG and GSPS conversion"
authors = ["a-parida12 <abhijeet@deepc.ai>"]
license = "MIT"
repository = 'https://github.com/a-parida12/nekton'
readme = 'README.md'
keywords = ["dicom", "medical-imaging", "nifti",  "dicom-seg", "gsps"]

[tool.poetry.dependencies]
python = "^3.12"
nibabel = "^5.4.2"
pydicom = "^2.4.4"
numpy = "^1.26.4"
pydicom-seg = "^0.4.1"
SimpleITK = "^2.5.5"


[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"
flake8 = "^7.3.0"
pytest-cov = "^7.1.0"
commitizen = "^4.16.4"
bandit = "^1.9.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "nekton/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "master"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"
